--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MVC</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/MVC.styles.css" asp-append-version="true" />
+    <title>Home</title>
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="HomeStyle.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-custom border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MVC</a>
+                <a class="navbar-brand" href="index.html">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,24 +19,64 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="About" asp-action="Me">About Me</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pup" asp-action="RandPic">Dog Image</a>
+                            <a class="nav-link" href="projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pup" asp-action="Scoop">Dog Fact</a>
+                            <a class="nav-link" href="skillsets.html">Skill Sets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pup" asp-action="Index">Dog Image & Fact</a>
+                            <a class="nav-link" href="employment.html">Employment History</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    
-        <h1>Hello Worl</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+
+    <main role="main" class="container">
+        <div class="center-box">
+            <h1 class="big-header">Lucas Aleman</h1>
+            <img class="profImg" src="https://media.licdn.com/dms/image/v2/D5603AQGHvmhxHtSpvQ/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1706210423647?e=1737590400&v=beta&t=J2y15wv9RTkDQUUdw94D9J7VB6NfytCePaMJ3NTX9AA" alt="Profile Picture" />
+            <hr />
+            <div class="purpose-box">
+                <h2>Welcome to My Website!</h2>
+                <h6>The purpose of this website is to give an introduction about myself and show my experience and achievements.</h6>
+                <h6>This website will also show my expertise in web design and HTML/CSS programming!</h6>
+            </div>
+            <hr />
+            <h2>Use the links below to continue:</h2>
+            <div class="container btn-container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <a class="btn btn-custom" href="about.html" role="button">About Me</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a class="btn btn-custom" href="projects.html" role="button">My Projects</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <a class="btn btn-custom" href="skillsets.html" role="button">Skill Sets</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a class="btn btn-custom" href="employment.html" role="button">Employment History</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2024 - Lucas Aleman
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
+
